--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,14 @@ dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.activation-1.1.jar=..\\..\\activation-1.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=E:\\SWP391\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=E:\\SWP391\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail-1.6.2.jar=..\\..\\javax.mail-1.6.2.jar
 file.reference.jaxb-api-2.1.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.1.jar-1=E:\\SWP391\\lib\\lib\\jaxb-api-2.1.jar
 file.reference.sqljdbc42.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=E:\\SWP391\\lib\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +50,11 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.activation-1.1.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar-1}:\
+    ${file.reference.sqljdbc42.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
