test add new logo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,18 +25,13 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.activation-1.1.jar=..\\..\\activation-1.1.jar
 file.reference.activation-1.1.jar-1=lib\\activation-1.1.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail-1.6.2.jar=..\\..\\javax.mail-1.6.2.jar
 file.reference.javax.mail-1.6.2.jar-1=lib\\javax.mail-1.6.2.jar
-file.reference.jaxb-api-2.1.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\jaxb-api-2.1.jar
 file.reference.jaxb-api-2.1.jar-1=lib\\jaxb-api-2.1.jar
-file.reference.sqljdbc42.jar=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\sqljdbc42.jar
 file.reference.sqljdbc42.jar-1=lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -47,12 +42,6 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.activation-1.1.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.activation-1.1.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
@@ -85,7 +74,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
