--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.activation-1.1.jar=E:\\SWP_Project\\LaptopShop1\\lib\\activation-1.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\SWP_Project\\LaptopShop1\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\SWP_Project\\LaptopShop1\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-1.6.2.jar=E:\\SWP_Project\\LaptopShop1\\lib\\javax.mail-1.6.2.jar
+file.reference.jaxb-api-2.1.jar=E:\\SWP_Project\\LaptopShop1\\lib\\jaxb-api-2.1.jar
+file.reference.sqljdbc42.jar=E:\\SWP_Project\\LaptopShop1\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\build.properties
