--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,6 +10,6 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\kieud\\AppData\\Roaming\\NetBeans\\17\\build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\build.properties
 ccff4035d542da1d2f6486cd31aab0439d19c16f
