--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\kieud\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 file.reference.activation-1.1.jar=E:\\SWP_Project\\LaptopShop1\\lib\\activation-1.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\SWP_Project\\LaptopShop1\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\SWP_Project\\LaptopShop1\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
@@ -11,5 +11,5 @@ j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundatio
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\kieud\\AppData\\Roaming\\NetBeans\\17\\build.properties
 ccff4035d542da1d2f6486cd31aab0439d19c16f
