--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ excludes=
 file.reference.activation-1.1.jar-1=lib\\activation-1.1.jar
 file.reference.commons-fileupload-1.5.jar=C:\\Users\\ADMIN\\Desktop\\commons-fileupload-1.5.jar
 file.reference.commons-io-2.17.0.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.17.0.jar
+file.reference.hy.common.zxing-3.4.4.jar=lib\\hy.common.zxing-3.4.4.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail-1.6.2.jar-1=lib\\javax.mail-1.6.2.jar
 file.reference.jaxb-api-2.1.jar-1=lib\\jaxb-api-2.1.jar
+file.reference.jcommander-1.82.jar=lib\\jcommander-1.82.jar
 file.reference.sqljdbc42.jar-1=lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -51,7 +53,9 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.1.jar-1}:\
     ${file.reference.sqljdbc42.jar-1}:\
     ${file.reference.commons-fileupload-1.5.jar}:\
-    ${file.reference.commons-io-2.17.0.jar}
+    ${file.reference.commons-io-2.17.0.jar}:\
+    ${file.reference.hy.common.zxing-3.4.4.jar}:\
+    ${file.reference.jcommander-1.82.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
