--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar-1=lib\\activation-1.1.jar
+file.reference.byte-buddy-1.15.5.jar=C:\\Users\\kieud\\Downloads\\caculate\\byte-buddy-1.15.5.jar
+file.reference.byte-buddy-agent-1.15.5.jar=C:\\Users\\kieud\\Downloads\\caculate\\byte-buddy-agent-1.15.5.jar
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\kieud\\Downloads\\caculate\\hamcrest-core-1.3.jar
 file.reference.hy.common.zxing-3.4.4.jar=lib\\hy.common.zxing-3.4.4.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail-1.6.2.jar-1=lib\\javax.mail-1.6.2.jar
 file.reference.jaxb-api-2.1.jar-1=lib\\jaxb-api-2.1.jar
 file.reference.jcommander-1.82.jar=lib\\jcommander-1.82.jar
+file.reference.junit-4.13.2.jar=C:\\Users\\kieud\\Downloads\\caculate\\junit-4.13.2.jar
+file.reference.mockito-core-5.13.0.jar=C:\\Users\\kieud\\Downloads\\caculate\\mockito-core-5.13.0.jar
 file.reference.sqljdbc42.jar-1=lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -62,7 +67,13 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}:\
+    ${file.reference.byte-buddy-1.15.5.jar}:\
+    ${file.reference.byte-buddy-agent-1.15.5.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.mockito-core-5.13.0.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
