--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,10 +35,15 @@ endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar-1=lib\\activation-1.1.jar
 file.reference.commons-logging-1.2.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\login-google_lib\\login-google\\commons-logging-1.2.jar
 file.reference.fluent-hc-4.5.5.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/fluent-hc-4.5.5.jar
+file.reference.fluent-hc-4.5.5.jar-1=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\login-google_lib\\login-google\\fluent-hc-4.5.5.jar
 file.reference.gson-2.8.2.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\login-google_lib\\login-google\\gson-2.8.2.jar
 file.reference.httpclient-4.5.5.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/httpclient-4.5.5.jar
+file.reference.httpclient-4.5.5.jar-1=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\login-google_lib\\login-google\\httpclient-4.5.5.jar
 file.reference.httpcore-4.4.9.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/httpcore-4.4.9.jar
+file.reference.httpcore-4.4.9.jar-1=..\\..\\K\u00ec 4\\Tool PRJ301\\PRJ301_Resourse\\login-google_lib\\login-google\\httpcore-4.4.9.jar
 file.reference.hy.common.zxing-3.4.4.jar=lib\\hy.common.zxing-3.4.4.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
@@ -45,7 +56,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=10-web
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.8-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -61,7 +72,12 @@ javac.classpath=\
     ${file.reference.fluent-hc-4.5.5.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.httpclient-4.5.5.jar}:\
-    ${file.reference.httpcore-4.4.9.jar}
+    ${file.reference.httpcore-4.4.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.fluent-hc-4.5.5.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.httpclient-4.5.5.jar-1}:\
+    ${file.reference.httpcore-4.4.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,6 +87,8 @@ javac.processorpath=\
 javac.source=17
 javac.target=17
 
+javac.test.classpath=
+javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
