--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,6 +72,7 @@ javac.processorpath=\
     ${javac.classpath}
 javac.source=17
 javac.target=17
+javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
