--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.activation-1.1.jar=F:\\SWP_Project\\it3\\LaptopShop-SE1870-NJ-G1\\lib\\activation-1.1.jar
 file.reference.commons-logging-1.2.jar=F:\\SWP_Project\\it3\\LaptopShop-SE1870-NJ-G1\\lib\\commons-logging-1.2.jar
 file.reference.fluent-hc-4.5.5.jar=F:\\SWP_Project\\it3\\LaptopShop-SE1870-NJ-G1\\lib\\fluent-hc-4.5.5.jar
 file.reference.gson-2.8.2.jar=F:\\SWP_Project\\it3\\LaptopShop-SE1870-NJ-G1\\lib\\gson-2.8.2.jar
