--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar-1=lib\\activation-1.1.jar
-file.reference.commons-logging-1.2.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=../../K\u00ec 4/Tool PRJ301/PRJ301_Resourse/login-google_lib/login-google/httpcore-4.4.9.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=lib/fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=lib/httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=lib/httpcore-4.4.9.jar
 file.reference.hy.common.zxing-3.4.4.jar=lib\\hy.common.zxing-3.4.4.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
